2004-09-01  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: moved EMI/UCP specific 'throughput' to 
      general section, since this is within the SMSCConn structure itself.
      Added 'smasi' features to the check lists.

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-rwlock.[ch]: fixed includes. we don't define HAVE_CONFIG_H so
      gw-config.h should be always included.

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: added ESME dlr bit to DLR processing (some smsc's sent
      us esm_class=0x08 and it's IMO ok). 

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: removed centrium references and changed email addr.

2004-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/msg-decl.h, gw/msg.[ch], gw/sms.h, gw/smsbox.c,
      gw/smscconn.c, gw/wapbox.c, gw/smsc/smsc_http.c, gw/smsc/smsc_soap.c,
      utils/mtbatch.c: applied patch that implements concatenation of large
      sms inside bearerbox and does care of a sending all message parts over
      one smsc link. Now we have a problem with concatenated large sms that
      bearerbox will try to load balance those over diff. smsc links and such
      messages arrive as junk (all parts of concatenated large sms must go through
      the same smsc).

2004-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw-config.h.in, configure.in, configure: changed 'HAVE_PTHREAD_RWLOCK_T' to
      more generic 'HAVE_PTHREAD_RWLOCK'.
    * gwlib/gw-rwlock.[ch]: added "ugly" rwlock emulation code if no pthread_rwlock
      support detected. This emulation code uses List and works in all cases where
      rwlock used in kannel.

2004-08-26  Stipe Tolj  <stolj@wapme.de>
    * gw/wap-appl.c: fixing a memory leak while not destroying a created octstr
      if wml_compile() fails. Thanks again to Slava for the patch.
      [Msg-ID: <412B46C9.1030800@lmt.lv>]

2004-08-26  Stipe Tolj  <stolj@wapme.de>